# routes/api.php
@@ -1,6 +1,5 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
 /*
@@ -16,21 +15,10 @@ use Illuminate\Support\Facades\Route;
 
 // API routes will be defined here
 
-use App\Http\Controllers\Api\BuildingController;
-use App\Http\Controllers\Api\ActivityController;
 use App\Http\Controllers\Api\OrganizationController;
 use App\Http\Middleware\ApiKeyMiddleware;
 
-// Apply API key middleware to all routes
 Route::middleware([ApiKeyMiddleware::class])->group(function () {
-    // Building routes
-    Route::apiResource('buildings', BuildingController::class);
-
-    // Activity routes
-    Route::apiResource('activities', ActivityController::class);
-    Route::get('activities/tree', [ActivityController::class, 'tree']);
-
-    // Organization routes
     Route::apiResource('organizations', OrganizationController::class);
     Route::get('buildings/{buildingId}/organizations', [OrganizationController::class, 'byBuilding']);
     Route::get('activities/{activityId}/organizations', [OrganizationController::class, 'byActivity']);
